--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "next": "15.5.5",
     "posthog-js": "^1.275.3",
+    "posthog-node": "^5.10.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
