--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -13,9 +13,11 @@
     "db:auth:generate": "npx @better-auth/cli@latest generate --output src/db/schema.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "better-auth": "^1.3.27",
@@ -26,12 +28,16 @@
     "lucide-react": "^0.545.0",
     "motion": "^12.23.24",
     "next": "15.5.5",
+    "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "posthog-js": "^1.275.3",
     "posthog-node": "^5.10.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "react-hook-form": "^7.65.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
