--- a/turbo.json
+++ b/turbo.json
@@ -4,7 +4,13 @@
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
-      "env": ["BETTER_AUTH_SECRET", "DATABASE_URL", "BETTER_AUTH_URL"],
+      "env": [
+        "BETTER_AUTH_SECRET",
+        "DATABASE_URL",
+        "BETTER_AUTH_URL",
+        "POSTHOG_API_KEY",
+        "POSTHOG_ENV_ID"
+      ],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": [".next/**", "!.next/cache/**"]
     },
